--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "start": "vite",
+    "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
@@ -14,9 +14,11 @@
     "@tanstack/react-query": "^5.74.3",
     "antd": "^5.24.8",
     "axios": "^1.6.2",
-    "firebase": "^10.12.0",
+    "i18next": "^25.0.1",
+    "i18next-browser-languagedetector": "^8.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.5.1",
     "react-router-dom": "^6.21.2",
     "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.43.0"
   },
